--- a/multi-stage-multi-agent/Jenkinsfile
+++ b/multi-stage-multi-agent/Jenkinsfile
@@ -1,21 +1,50 @@
 pipeline {
-  agent none
-  stages {
-    stage('Back-end') {
-      agent {
-        docker { image 'maven:3.8.1-adoptopenjdk-11' }
-      }
-      steps {
-        sh 'mvn --version'
-      }
+    agent any
+    
+    stages {
+        stage('Build') {
+            steps {
+                // Compile the Java code
+                sh 'javac HelloWorld.java'
+            }
+        }
+        stage('Test') {
+            steps {
+                // Run tests (if any)
+                // You can add your test commands here
+            }
+        }
+        stage('Deploy') {
+            steps {
+                // Execute the Java program
+                sh 'java HelloWorld'
+            }
+        }
     }
-    stage('Front-end') {
-      agent {
-        docker { image 'node:16-alpine' }
-      }
-      steps {
-        sh 'node --version'
-      }
-    }
-  }
 }
+
+pipeline {
+    agent any
+    
+    stages {
+        stage('Build') {
+            steps {
+                // Nothing to build for Node.js application
+            }
+        }
+        stage('Test') {
+            steps {
+                // Run tests (if any)
+                // You can add your test commands here
+            }
+        }
+        stage('Deploy') {
+            steps {
+                // Execute the Node.js program
+                sh 'node app.js'
+            }
+        }
+    }
+}
+
+      
